Enable Azure Pipeline build for TGL
This patch enabled auto build for TGL Azure Pipelines.
Only Windows build is enabled. GCC build has IASL issue.

Signed-off-by: Maurice Ma <maurice.ma@intel.com>

--- a/.azurepipelines/azure-pipelines.yml
+++ b/.azurepipelines/azure-pipelines.yml
@@ -77,6 +77,10 @@ jobs:
       #   Build.Name:   "cmlv"
       #   Build.Arch:   "-a x64"
       #   Build.Target: ""
+      # TGL_X86_DEBUG:
+      #   Build.Name:   "tgl"
+      #   Build.Arch:   ""
+      #   Build.Target: ""
 
   pool:
     vmImage: 'ubuntu-latest'
@@ -136,6 +140,14 @@ jobs:
         Build.Target: "-r"
       CMLV_X64_DEBUG:
         Build.Name:   "cmlv"
+        Build.Arch:   "-a x64"
+        Build.Target: ""
+      TGL_X86_RELEASE:
+        Build.Name:   "tgl"
+        Build.Arch:   ""
+        Build.Target: "-r"
+      TGL_X64_DEBUG:
+        Build.Name:   "tgl"
         Build.Arch:   "-a x64"
         Build.Target: ""
 
