--- a/Platform/QemuBoardPkg/CfgData/CfgData_BootOption.yaml
+++ b/Platform/QemuBoardPkg/CfgData/CfgData_BootOption.yaml
@@ -11,6 +11,6 @@
 - $ACTION      :
     page         : OS
 - !expand { BOOT_OPTION_TMPL : [ 0 ,   0    ,   0 ,    1   ,   0   ,    0  ,     0 ,     2 , 'iasimage.bin' ] }
-- !expand { BOOT_OPTION_TMPL : [ 1 ,   0    ,   0 ,    0   ,   0   ,    5  ,     0 ,     2 , 'iasimage.bin' ] }
+- !expand { BOOT_OPTION_TMPL : [ 1 ,   0    ,   0 ,    0   ,   0   , 0xff  ,     0 ,     2 , 'iasimage.bin' ] }
 - !expand { BOOT_OPTION_TMPL : [ 2 ,   0    ,   0 ,    6   ,   0   ,    0  ,     0 ,     2 , 'iasimage.bin' ] }
 - !expand { BOOT_OPTION_TMPL : [ 3 ,   0    ,   0 ,    5   ,   0   ,    0  ,     0 ,     2 , 'iasimage.bin' ] }
