[Common][EHL] Allow dynamic setting for payload ID GPIO pin config
Here are the changes:
1. Add payload ID GPIO pin selection option to Common CfgData YAML.
2. Let EHL platform use Common CfgData to set payload ID gpio pin
3. Update CfgData_Ext_IotgCrb.dlt with the default GPIO pin used for
   payload ID selection

Signed-off-by: Lean Sheng <lean.sheng.tan@intel.com>

--- a/Platform/CommonBoardPkg/CfgData/CfgData_Common.yaml
+++ b/Platform/CommonBoardPkg/CfgData/CfgData_Common.yaml
@@ -26,6 +26,30 @@
                      Specify payload ID string. Empty will boot default payload. Otherwise, boot specified payload ID in multi-payload binary.
       length       : 0x04
       value        : ''
+  - PayloadSelGpio :
+    - $STRUCT      :
+        name         : GPIO pin for switching payload
+        struct       : PAYLOAD_SEL_GPIO_PIN
+        length       : 0x04
+        value        : 0
+    - PinNum       :
+        name         : Pin Number
+        type         : EditNum, DEC, (0,24)
+        condition    : ($GEN_CFG_DATA.PayloadSelGpio.Enable > 0)
+        help         : >
+                       Specify GPIO Pin Number
+        length       : 24b
+    - Rsvd1        :
+        name         : Reserved
+        type         : Reserved
+        length       : 7b
+    - Enable       :
+        name         : Payload Selection Pin Enable
+        type         : Combo
+        option       : $EN_DIS
+        help         : >
+                       Enable/Disable this pin for payload selection.
+        length       : 1b
   - OsCrashMemorySize :
       name         : OS Crash Memory Size
       type         : Combo
