[TGL] add control for TCSS PTM Enable
According to EDS, TCSS PTM Enable (PTME on [B0,D7,F0] offset 158h)
should not be set unless a associated downstream port already has
PTM Enable set.

This patch adds a CfgData control for each TCSS PCIe Root Port.
User can enable each of them when a downstream port meets the
requirement. The new CfgData control is similiar to the following
setup in UEFI BIOS Menu:

  Intel Advanced -> SA -> TCSS -> PCIE RP[]

Last, this patch also removes redundant PTM configurations,
because (a) this PTM settings will be overridden by built-in
CfgData_Silicon.yaml or customized DLT; b) even for customized SBL,
FSP can use default PTM settings.

Signed-off-by: Stanley Chang <stanley.chang@intel.com>

--- a/Platform/TigerlakeBoardPkg/CfgData/CfgData_Silicon.yaml
+++ b/Platform/TigerlakeBoardPkg/CfgData/CfgData_Silicon.yaml
@@ -176,6 +176,13 @@
                      Enable/Disable ITBT Root Port
       length       : 0x04
       value        : { 0x1, 0x1, 0x1, 0x1 }
+  - TcssPcieRootPortPtmEn :
+      name         : Enable/Disable PTM for TCSS PCIe Root Port
+      type         : EditNum, HEX, (0x00,0xFFFFFFFF)
+      help         : >
+                     Enable/Disable Precision Time Measurement (PTM) for TCSS PCIe Root Ports
+      length       : 0x04
+      value        : { 0x0, 0x0, 0x0, 0x0 }
   - PmSupport    :
       name         : Enable/Disable IGFX PmSupport
       type         : Combo
