[EHL] Fix ConfigEditor tool crash and invalid options
Here are the changes:
1. Update mismatched & incorrect config options & variables
2. Fix invalid boot options configs
3. [common] Include 'preOS + mender' support for boot flags in
   boot options template

Signed-off-by: Lean Sheng Tan <lean.sheng.tan@intel.com>

--- a/Platform/CommonBoardPkg/CfgData/Template_BootOption.yaml
+++ b/Platform/CommonBoardPkg/CfgData/Template_BootOption.yaml
@@ -30,7 +30,7 @@ BOOT_OPTION_TMPL: >
     - BootFlags_$(1) :
         name         : Boot Flags
         type         : Combo
-        option       : 0:Normal, 4:PreOS support, 8:Extra image support, 12:PreOS and extra image support, 16:Mender support
+        option       : 0:Normal, 4:PreOS support, 8:Extra image support, 12:PreOS and extra image support, 16:Mender support, 20:PreOS and mender support
         help         : >
                        Specify boot flags (options)
                        When extra image or PreOS image is selected, need config them in next boot option with proper image type.
