[EHL] Rename LowPowerS0Idle to S0ix
For consistency and public understanding, rework to change
'LowPowerS0Idle' to 'S0ix'.
- rename LowPowerS0Idle to S0ix
- add s0ix variable in PlatformData.h
- add s0ix flag check in stage 1B
- move Tcc s0ix support flag from stage 2 to stage 1B

Signed-off-by: Lean Sheng Tan <lean.sheng.tan@intel.com>

--- a/Platform/ElkhartlakeBoardPkg/CfgData/CfgData_Features.yaml
+++ b/Platform/ElkhartlakeBoardPkg/CfgData/CfgData_Features.yaml
@@ -41,12 +41,12 @@
         help         : >
                        To 'opt-in' for debug, please select 'Enabled' with the desired debug probe type. Enabling this BIOS option may alter the default value of other debug-related BIOS options.\Manual- Do not use Platform Debug Consent to override other debug-relevant policies, but the user must set each debug option manually, aimed at advanced users.\nNote- DCI OOB (aka BSSB) uses CCA probe;[DCI OOB+DbC] and [USB2 DbC] have the same setting.
         length       : 3b
-    - LowPowerIdle   :
-        name         : Low Power Idle Enable
+    - S0ix         :
+        name         : S0ix (Low Power Idle) Enable
         type         : Combo
         option       : $EN_DIS
         help         : >
-                       Enable/Disable Low Power Idle feature. 1:Low Power Idle Enabled, 0:Low Power Idle Disabled
+                       Enable/Disable S0ix feature. 1:S0ix Enabled, 0:S0ix Disabled
         length       : 1b
     - NewGpioSchemeEnable   :
         name         : New GPIO Scheme Enable
