[TGL] Add CFG for USB20Enable
The default values for USB20Enable from FSP
is set to enabled. Some platforms need to
disable some of these USB20 ports (e.g. TGL-U
DDR4 and LPDDR4 RVP). Add CFG data field for
the USB20Enable settings per port.

Signed-off-by: James Gutbub <james.gutbub@intel.com>

--- a/Platform/TigerlakeBoardPkg/CfgData/CfgDataDef.yaml
+++ b/Platform/TigerlakeBoardPkg/CfgData/CfgDataDef.yaml
@@ -176,7 +176,15 @@ template:
     - $ACTION      :
         page         : MEM_$(1)
 
-
+  USB_PORT_TMPL: >
+    - Usb$(1)Port$(2) :
+        name : Enable USB$(1) port $(2)
+        type : Combo
+        option : $EN_DIS
+        help : >
+               Enable/disable USB$(1) port $(2).
+        length : 1b
+        value : 1
 
   - !include Platform/CommonBoardPkg/CfgData/Template_BootOption.yaml
 
