feat: [ADL/RPL] FuSa updates based on latest FSP and specification.
- MC and CMF Parity combined into one FSP UPD.

- Added SBL Config items for IehMode, TCSS D3Hot and D3Cold, CPU PCIe
Power gating, VccSt, TCSS Cstate limit. These are all needed for the FuSa
specific dlt file. ADL-S dlt files updated so D3Hot and VccSt defaults are
unchanged, since these defaults were previously set by PCH sku.

- FuSa diagnostic mode PCD to track Diagnostic mode across stages. Crash
Log Data PCD will not be used and has been removed.

- GSPI example driver header file added.

Signed-off-by: Bejean Mosher <bejean.mosher@intel.com>

--- a/Platform/AlderlakeBoardPkg/CfgData/CfgData_FuSa.yaml
+++ b/Platform/AlderlakeBoardPkg/CfgData/CfgData_FuSa.yaml
@@ -102,11 +102,11 @@ $ACTION      :
       length       : 0x01
       value        : 0x0
   - McParity :
-      name         : FuSa MC Parity
+      name         : FuSa MC/CMF Parity
       type         : Combo
       option       : $EN_DIS
       help         : >
-                     MC Parity and error reporting configuration
+                     MC and CMF Parity and error reporting configuration
       length       : 0x01
       value        : 0x0
   - IbeccParity :
@@ -115,14 +115,6 @@ $ACTION      :
       option       : $EN_DIS
       help         : >
                      IBECC Parity and error reporting configuration
-      length       : 0x01
-      value        : 0x0
-  - CmfParity :
-      name         : FuSa CMF Parity
-      type         : Combo
-      option       : $EN_DIS
-      help         : >
-                     CMF Parity and error reporting configuration
       length       : 0x01
       value        : 0x0
   - DiagGspiCtrlr :
